<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:background="@color/light_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/cyclic_algorithm"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/micro_textSize" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/a1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/a"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize3"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/x1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textSize2"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/b"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize3"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/x2"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textSize2"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize3"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/x3"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textSize2"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/textView114"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/d"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize3"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/x4"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textSize2"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center"
                android:importantForAutofill="no"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/rvn"
                android:textColor="@color/white"
                android:textSize="@dimen/textSize3"
                android:gravity="center"/>

            <EditText
                android:id="@+id/editText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/y"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/textSize2"
                android:inputType="numberSigned|numberDecimal"
                android:gravity="center"
                android:importantForAutofill="no"/>

        </LinearLayout>

        <Button
            android:onClick="autoFill"
            android:id="@+id/button1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corner"
            android:textSize="12sp"
            android:text="@string/autoFill"/>

        <Button
            android:onClick="lab3"
            android:id="@+id/button2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_corner"
            android:textSize="12sp"
            android:text="@string/textT"/>


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_below="@+id/button2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_below="@id/tableLayout"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TableLayout
            android:id="@+id/tableLayout3"
            android:layout_below="@id/tableLayout2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TableLayout
            android:id="@+id/tableLayout4"
            android:layout_below="@id/tableLayout3"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TableLayout
            android:id="@+id/tableLayout5"
            android:layout_below="@id/tableLayout4"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TableLayout
            android:id="@+id/tableLayout6"
            android:layout_below="@id/tableLayout5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TableLayout
            android:id="@+id/tableLayout7"
            android:layout_below="@id/tableLayout6"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:stretchColumns="*" />

        <TextView
            android:id="@+id/txt33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tableLayout7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:visibility="invisible"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:text="@string/result"
            android:gravity="center"
            android:textSize="@dimen/textSize"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt33"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="@dimen/micro_textSize"/>

        <TextView
            android:id="@+id/textView233"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView22"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize2"
            android:gravity="center"/>

    </RelativeLayout>

</ScrollView>